--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,11 @@
 	</head>
 	<body>
 		<div id="mocha"></div>
+		<script>
+			if (!~navigator.userAgent.toLowerCase().indexOf('firefox')) {
+				throw new Error("you should use Firefox because some es6 features are only supported on Firefox\n");
+			}
+		</script>
 		<script src="out/build.js"></script>
 		<script> require('tombo-test-suite'); </script>
 	</body>
