new test structure done, documentation/linting removed i'll use gulp plugins

--- a/test/index.html
+++ b/test/index.html
@@ -3,10 +3,12 @@
 		<meta charset="utf-8">
 		<title>tombo test suite</title>
 		<link rel="stylesheet" href="build.css" />
+		<script src="build.js"></script>
 	</head>
 	<body>
+		<!-- <div id="coverage"></div> -->
 		<div id="mocha"></div>
-		<script src="build.js"></script>
+
 		<script> require('tombo-test-suite'); </script>
 	</body>
 </html>
