don't use coverage for now

--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
 		<script src="build.js"></script>
 	</head>
 	<body>
-		<!-- <div id="coverage"></div> -->
+		<div id="coverage"></div>
 		<div id="mocha"></div>
 
 		<script> require('tombo-test-suite'); </script>
