--- a/test/index.html
+++ b/test/index.html
@@ -2,13 +2,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>tombo test suite</title>
-		<link rel="stylesheet" href="build.css" />
-		<script src="build.js"></script>
+		<link rel="stylesheet" href="build/build.css" />
 	</head>
 	<body>
-		<div id="coverage"></div>
 		<div id="mocha"></div>
 
-		<script> require('tombo-test-suite'); </script>
+		<script src="build/build.js"></script>
 	</body>
 </html>
