use only root component.json, remove all old build tools

--- a/test/index.html
+++ b/test/index.html
@@ -2,11 +2,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>tombo test suite</title>
-		<link rel="stylesheet" href="build/build.css" />
+		<link rel="stylesheet" href="../build/build.css" />
 	</head>
 	<body>
 		<div id="mocha"></div>
 
-		<script src="build/build.js"></script>
+		<script type="text/javascript;version=1.7" src="../build/build.js"></script>
+		<script>require('tombo/test/index.js');</script>
 	</body>
 </html>
