change folder specs name to unit

--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,6 @@
 		<div id="mocha"></div>
 
 		<script type="text/javascript;version=1.7" src="../build/build.js"></script>
-		<script>require('tombo/test/index.js');</script>
+		<script>require('tombo/test/unit/index.js');</script>
 	</body>
 </html>
